syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/dialogovo";
option java_package = "ru.yandex.alice.protos.data.scenario.dialogovo";

import "mapreduce/yt/interface/protos/extension.proto";

message TDialogovoSkillCardData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TSkillInfo {
        string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
        string Logo = 2 [json_name = "logo", (NYT.column_name) = "logo"];
        string SkillId = 3 [json_name = "skill_id", (NYT.column_name) = "skill_id"];
    }

    message TSkillRequest {
        string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
    }

    message TSkillResponse {

        message TButton {
            string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
            string Url = 2 [json_name = "url", (NYT.column_name) = "url"];
            string Payload = 3 [json_name = "payload", (NYT.column_name) = "payload"];
        }

        message TSuggest {
            string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
            string Url = 2 [json_name = "url", (NYT.column_name) = "url"];
            string Payload = 3 [json_name = "payload", (NYT.column_name) = "payload"];
        }

        message TTextResponse {
            string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
        }

        message TImageItem {
            string ImageUrl = 1 [json_name = "image_url", (NYT.column_name) = "image_url"];
            string Title = 2 [json_name = "title", (NYT.column_name) = "title"];
            string Description = 3 [json_name = "description", (NYT.column_name) = "description"];
            TButton Button = 4 [json_name = "button", (NYT.column_name) = "button"];
        }

        message TBigImageResponse {
            TImageItem ImageItem = 1 [json_name = "image_item", (NYT.column_name) = "image_item"];
        }

        message TImageGalleryResponse {
            repeated TImageItem ImageItems = 1 [json_name = "image_items", (NYT.column_name) = "image_items"];
        }

        message TItemsListHeader {
            string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
        }

        message TItemsListFooter {
            string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
            TButton Button = 2 [json_name = "button", (NYT.column_name) = "button"];
        }

        message TItemsListResponse {
            TItemsListHeader ItemsLisetHeader = 1 [json_name = "items_list_header", (NYT.column_name) = "items_list_header"];
            repeated TImageItem ImageItems = 2 [json_name = "image_items", (NYT.column_name) = "image_items"];
            TItemsListFooter ItemsLisetFooter = 3 [json_name = "items_list_footer", (NYT.column_name) = "items_list_footer"];
        }

        oneof ResponseCard {
            option (NYT.variant_field_name) = "response_card";
            TTextResponse TextResponse = 1 [json_name = "text_response", (NYT.column_name) = "text_response"];
            TBigImageResponse BigImageResponse = 2 [json_name = "big_image_response", (NYT.column_name) = "big_image_response"];
            TImageGalleryResponse ImageGalleryResponse = 3 [json_name = "image_gallery_response", (NYT.column_name) = "image_gallery_response"];
            TItemsListResponse ItemsListResponse = 4 [json_name = "items_list_response", (NYT.column_name) = "items_list_response"];
        }

        repeated TButton buttons = 5 [json_name = "buttons", (NYT.column_name) = "buttons"];
        repeated TSuggest suggests = 6 [json_name = "suggests", (NYT.column_name) = "suggests"];
    }

    TSkillInfo SkillInfo = 1 [json_name = "skill_info", (NYT.column_name) = "skill_info"];
    TSkillRequest SkillRequest = 2 [json_name = "skill_request", (NYT.column_name) = "skill_request"];
    TSkillResponse SkillResponse = 3 [json_name = "skill_response", (NYT.column_name) = "skill_response"];
}

message TDialogovoSkillTeaserData {

    message TSkillInfo {
        string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
        string Logo = 2 [json_name = "logo", (NYT.column_name) = "logo"];
        string SkillId = 3 [json_name = "skill_id", (NYT.column_name) = "skill_id"];
    }

    TSkillInfo SkillInfo = 1 [json_name = "skill_info", (NYT.column_name) = "skill_info"];
    string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
    string Text = 3 [json_name = "text", (NYT.column_name) = "text"];
    string Title = 4 [json_name = "title", (NYT.column_name) = "title"];
    string Action = 5 [json_name = "action", (NYT.column_name) = "action"];
}
